# google-adk-aws

./: .pre-commit-config.yaml  Makefile  Makefile.tests  README.md  pyproject.toml
.github/workflows/: ci.yml  comprehensive-tests.yml
docs/: ARTIFACTS_GUIDE.md  EXAMPLES_GUIDE.md  ROADMAP.md
docs/plans/S3/: S3_ARTIFACT_SERVICE_IMPLEMENTATION_PLAN.md  S3_ARTIFACT_SERVICE_IMPL_PHASE_1.md  S3_ARTIFACT_SERVICE_IMPL_PHASE_2.md  S3_ARTIFACT_SERVICE_IMPL_PHASE_3.md  S3_ARTIFACT_SERVICE_IMPL_PHASE_4.md
examples/: .env.example  README.md  agent_integration_demo.py  basic_demo.py  phase2_features_demo.py  phase3_error_handling_demo.py
examples/common/: __init__.py  config.py
examples/s3-artifact-demo/: .env.example  README.md  pyproject.toml
examples/s3-artifact-demo/s3_artifact_demo/: __init__.py  agent.py  demo.py  prompt.py
examples/s3-artifact-demo/s3_artifact_demo/tools/: __init__.py  file_tools.py
examples/s3-artifact-demo/tests/: __init__.py  test_s3_artifacts.py
src/aws_adk/: __init__.py  batch_operations.py  connection_pool.py  edge_case_handlers.py  exceptions.py  retry_handler.py  s3_artifact_service.py  security.py  validation.py
tests/: conftest.py  test_init.py  utils.py
tests/automation/: __init__.py  report_generator.py  run_tests.py  test_config.py  test_runner.py
tests/integration/: test_s3_integration.py
tests/unit/: test_edge_cases_comprehensive.py  test_error_handling_comprehensive.py  test_performance_comprehensive.py  test_retry_handler.py  test_s3_artifact_service_basic.py  test_s3_artifact_service_enhanced.py  test_service_error_integration.py  test_validation_comprehensive.py
